--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,59 @@
 body {
+  background-color: rgba(127, 180, 255, 0.073);
+  font-family: "Roboto Slab", serif;
+}
+
+
+h1 {
   text-align: center;
+  font-size: 38px;
+}
+select {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  font-size: 20px;
+}
+h2 {
+  margin: 0 0 10px;
+  font-size: 28px;
+}
+.container {
+  max-width: 600px;
+  margin: 60px auto;
+  background-color: white;
+  padding: 30px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 10px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0 0.5);
+}
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.8;
+}
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 19px;
+  line-height: 35px;
+  vertical-align: middle;
+}
+
+footer {
+  font-size: 18px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
 }
