--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 body {
-  background-color: rgba(127, 180, 255, 0.073);
+  background-color: rgba(250, 250, 250, 0.32);
   font-family: "Roboto Slab", serif;
 }
-
 
 h1 {
   text-align: center;
@@ -10,6 +9,7 @@ h1 {
 }
 select {
   display: block;
+  background-color: rgb(224, 235, 251);
   width: 100%;
   padding: 10px;
   border-radius: 4px;
@@ -22,7 +22,7 @@ h2 {
 .container {
   max-width: 600px;
   margin: 60px auto;
-  background-color: white;
+  background-color: rgba(127, 180, 255, 0.493);
   padding: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
@@ -56,4 +56,8 @@ footer {
   font-size: 18px;
   text-align: center;
   color: rgba(0, 0, 0, 0.8);
+}
+
+a {
+  text-decoration: none;
 }
